[package]
name = "bjuno-token"
version = "0.13.2"
authors = ["Udit Gulati"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { path = "../../packages/utils", version = "0.13.2" }
cw2 = { path = "../../packages/cw2", version = "0.13.2" }
cw20 = { path = "../../packages/cw20", version = "0.13.2" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.13.2" }
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
